flux/infrastructure/media/radarr/deployment.yaml
# Auto-split from cluster files
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
#        runAsNonRoot: true
#        runAsUser: 1000
        fsGroup: 1000
#        runAsGroup: 1000
#        supplementalGroups:
#        - 1000
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        resources:
          limits:
            cpu: '4'
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 7878
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-movies
          mountPath: /data/movies
        - name: media-downloads
          mountPath: /downloads
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media-movies
        persistentVolumeClaim:
          claimName: media-movies
      - name: media-downloads
        persistentVolumeClaim:
          claimName: media-downloads
