flux/infrastructure/media/radarr/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-sso-media-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - radarr.becklab.cloud
    secretName: radarr-tls
  rules:
  - host: radarr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
