flux/infrastructure/media/radarr/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-movies
              mountPath: /data/movies
            - name: media-downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media-movies
          persistentVolumeClaim:
            claimName: media-movies
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      protocol: TCP
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.becklab.cloud`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: sso-admin-chain
          namespace: identity
  tls:
    secretName: radarr-tls
